--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
       <main class="container-fluid">
         <div class="text-center">
-          <input type = "text" >
-          <button type="button" class="btn btn-primary" onclick="Adicionar()">Adicionar Pedido</button>
+          <input id="txtNome" type = "text" >
+          <input id="txtInfo" type = "text" >
+          <button type="button" class="btn btn-primary" id="btn1"onclick="Adicionar()">Adicionar Pedido</button>
 
         </div >
 
